# FluGenome3D

./: .gitignore  LICENSE  Makefile  README.md  data_inventory_report.md  dataset_schema.md  environment.yml  implementation_plan.md  proposed_mvp_scope.md  pyproject.toml
app/: .gitignore  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
config/: filters.yml  local_paths.example.yml  pdbs.yml  phase6.yml  phase7_9.yml
data_export/: export_vercel_safe_bundle.py
data_manifest/: README.md  dataset_doi.txt
docs/: biological_background.md  claims_and_limitations.md  data_governance.md  methods.md  reproducibility.md  visual_guide.md
reports/: phase1_dataset_report.md  phase2_sequence_context_report.md  phase3_cds_refinement_report.md  phase4_representation_audit_report.md  phase5_tokenization_audit_report.md  phase6_tokenization_stability_report.md  phase7_antigenlm_bridge_report.md  phase8_latent_atlas_report.md  phase9_structure_mapping_report.md
scripts/: 01_inventory_data.py  02_build_dataset.py  03_compute_sequence_metrics.py  04_run_tokenization_audit.py  05_make_structure_demo.py  06_build_phase1_dataset.py  07_compute_phase2_metrics.py  08_refine_cds_phase3.py  09_build_phase4_representations.py  10_make_phase4_figures.py  11_run_phase5_tokenization_audit.py  12_run_phase6_tokenization_stability.py  13_build_phase7_antigenlm_bridge.py  14_build_phase8_latent_atlas.py  15_build_phase9_structure_mapping.py
tests/: test_antigenlm_bridge.py  test_cds_refinement.py  test_codon_usage.py  test_dataset_builder.py  test_kmer_profiles.py  (+16 more)
(+89 files in other folders)
